# ezcolors

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  debug_utils.py  ezcolors.py  ezcolors.pyi
test/: functions_to_test_data.py  test_ezcolors.py
tools/: _ezcolors_defs.py  gen.py
