# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezcolors"
version = "0.1.0"
description = "Simple ANSI color/style wrapper functions for terminal output."
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
