# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezcolors"
version = "0.1.0"
authors = [
    { name="Carlos Frias / cfrbal", email="carlosfriasbalmori@gmail.com" },
]
description = "A dead-simple, no-dependencies library for ANSI terminal colors."
readme = "README.md"
requires-python = ">=3.6"
license = { file="LICENSE" }
keywords = ["color", "terminal", "ansi", "cli", "console", "text", "style"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/cfrbal/ezcolors"
# Bug Tracker = "https://github.com/cfrbal/ezcolors/issues"

